Fix z-index on geocache map

--- a/_sass/geocache.scss
+++ b/_sass/geocache.scss
@@ -32,6 +32,10 @@
     width: 400px;
   }
   
+  .geocache-map {
+    z-index: 100;
+  }
+
   .map {
     width: 100%; 
     height:100%; 
